--- a/css/style.css
+++ b/css/style.css
@@ -73,6 +73,14 @@ select option {
     color:#fff;
     text-shadow:0 1px 0 rgba(0,0,0,0.4);
 }
+
+.error{
+  color: red;
+  font-weight: bold;
+  margin: 10px;
+  text-align: center;
+}
+
 .centrador{
   text-align: center;
 }
