--- a/css/style.css
+++ b/css/style.css
@@ -73,6 +73,11 @@ select option {
     color:#fff;
     text-shadow:0 1px 0 rgba(0,0,0,0.4);
 }
+input {
+  background-color: rgba(0,0,0,0.3);
+  color:#fff;
+    
+}
 
 .error{
   color: red;
